fix width issue on mobile

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,5 @@
 footer {
     background-color: #383736;
-    width:100%;
     text-align: center;
     height: fit-content;
     padding: .5em;
